[package]
name = "libosinfo"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.18.0"

[dependencies.ffi]
package = "libosinfo-sys"
path = "./libosinfo-sys"

[dependencies.glib]
package = "glib"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio"
git = "https://github.com/gtk-rs/gtk-rs-core"

[features]
default = ["v1_6"]
v1_3 = ["ffi/v1_3"]
v1_4 = ["ffi/v1_4", "v1_3"]
v1_5 = ["ffi/v1_5", "v1_4"]
v1_6 = ["ffi/v1_6", "v1_5"]
v1_7 = ["ffi/v1_7", "v1_6"]
v1_8 = ["ffi/v1_8", "v1_7"]
v1_10 = ["ffi/v1_10", "v1_8"]
