[package]
name = "libosinfo-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.libosinfo_1_0]
name = "libosinfo-1.0"
version = "1"

[package.metadata.system-deps.libosinfo_1_0.v1_3]
version = "1.3"

[package.metadata.system-deps.libosinfo_1_0.v1_4]
version = "1.4"

[package.metadata.system-deps.libosinfo_1_0.v1_5]
version = "1.5"

[package.metadata.system-deps.libosinfo_1_0.v1_6]
version = "1.6"

[package.metadata.system-deps.libosinfo_1_0.v1_7]
version = "1.7"

[package.metadata.system-deps.libosinfo_1_0.v1_8]
version = "1.8"

[package.metadata.system-deps.libosinfo_1_0.v1_10]
version = "1.10"

[package.metadata.docs.rs]
features = []

[lib]
name = "libosinfo_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_3 = []
v1_4 = ["v1_3"]
v1_5 = ["v1_4"]
v1_6 = ["v1_5"]
v1_7 = ["v1_6"]
v1_8 = ["v1_7"]
v1_10 = ["v1_8"]
